:bug: update PSR-4 autoload namespace in composer.json

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Jimmy\\LaravelPermissionsMongoDB\\": "src/"
+            "Jimmy\\Permissions\\": "src/"
         }
     },
     "extra": {
